--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,23 +3,39 @@
 @tailwind utilities;
 
 @layer components {
-    .layout {
-        @apply p-4 lg:p-5 xl:p-6;
-    }
+	.layout {
+		@apply p-4 lg:p-5 xl:p-6 flex flex-col;
+	}
 
-    .tbutton {
-        @apply mr-2 text-sm antialiased font-medium leading-normal;
-    }
+	.center {
+		@apply justify-center items-center;
+	}
 
-    .tcol {
-        @apply p-4 border-b border-blue-gray-50;
-    }
+	.row-section {
+		@apply flex flex-col md:flex-row;
+	}
 
-    .btn {
-        @apply px-4 py-2 text-center outline-none rounded-xl;
-    }
+	.btn {
+		@apply px-4 py-2 text-center outline-none rounded-xl;
+	}
 
-    .btn-primary {
-        @apply  btn text-white bg-primary hover:brightness-90 active:brightness-100 duration-200;
-    }
+	.btn-primary {
+		@apply btn text-white bg-primary hover:brightness-90 active:brightness-100 duration-200;
+	}
+
+	.input-primary {
+		@apply px-3 py-2 outline-none rounded-xl border border-gray-300 focus:border-secondary bg-white hover:bg-gray-200 focus:bg-white duration-200;
+	}
+
+	.tcol {
+		@apply p-4 border-b border-gray-50;
+	}
+
+	.tbutton {
+		@apply text-sm antialiased font-medium leading-normal;
+	}
+
+	.headline {
+		@apply font-semibold text-gray-900 text-xl lg:text-2xl;
+	}
 }
